[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-security-toolkit"
version = "2.0.0"
description = "Open-source domain security audit toolkit with customer-ready reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "dnspython>=2.4",
    "datasette>=0.64",
    "datasette-vega>=0.6",
]

[project.scripts]
domain-audit = "domain_audit.cli:main"
domain-dashboard = "domain_audit.dashboard:main"

[project.urls]
Repository = "https://github.com/wblv-dev/domain-security-toolkit"

[tool.setuptools.packages.find]
include = ["domain_audit*"]

[tool.setuptools.package-data]
domain_audit = ["datasette_metadata.json", "template.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
